AWS/Cloud Formation/Cloud_Stack.yaml
Parameters:
  VpcCIDR:
    Type: String
    Default: 10.0.0.0/16

  PublicSubnet1CIDR:
    Type: String
    Default: 10.0.10.0/24

  PublicSubnet2CIDR:
    Type: String
    Default: 10.0.20.0/24

  SSH:
    Type: String
    Default: 0.0.0.0/0
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: ^(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})$

  AmiId:
    Type: String
    Default: ami-0522ab6e1ddcc7055

Resources:
  Bucket:
    Type: AWS::S3::Bucket
    Properties: {}

  ImportedKeyPair:
    Type: AWS::EC2::KeyPair
    Properties:
      KeyName: awskey
      PublicKeyMaterial: ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIKLp5Kd74SdE+7hVzk35Fa+tCO23Cn0ee1qHGW6wsAZH
      
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      Tags:
        - Key: Name
          Value: Demo

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: Demo

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicSubnet01:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: ap-south-1a
      CidrBlock: !Ref PublicSubnet1CIDR
      Tags:
        - Key: Name
          Value: Public-1

  PublicSubnet02:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: ap-south-1b
      CidrBlock: !Ref PublicSubnet2CIDR
      Tags:
        - Key: Name
          Value: Public-2

  RouteTable01:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: Public Routes 01

  RouteTable02:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: Public Routes 02

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref RouteTable01
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  DefaultPublicRoute2:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref RouteTable02
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable01
      SubnetId: !Ref PublicSubnet01

  SubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable02
      SubnetId: !Ref PublicSubnet02

  Instance1:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: ap-south-1a
      InstanceType: t2.micro
      ImageId: !Ref AmiId
      SecurityGroupIds:
        - !Ref SecurityGroup
      SubnetId: !Ref PublicSubnet01
      KeyName: !Ref ImportedKeyPair
      Tags:
        - Key: Name
          Value: Public-1

  Instance2:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: ap-south-1b
      InstanceType: t2.micro
      ImageId: !Ref AmiId
      SecurityGroupIds:
        - !Ref SecurityGroup
      SubnetId: !Ref PublicSubnet02
      KeyName: !Ref ImportedKeyPair
      Tags:
        - Key: Name
          Value: Public-2

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: abc
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SSH
